# SoftwareRasterizer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
demos/hello_triangle/: CMakeLists.txt
demos/hello_triangle/src/: main.cpp
demos/rotating_cube/: CMakeLists.txt
demos/rotating_cube/src/: Window.cpp  main.cpp
include/: Level.hpp  Rasterizer.h  Renderer.hpp
include/math/: Color.hpp  Matrix4x4.h  Matrix4x4.hpp  Quaternion.h  Quaternion.hpp  Vector3.h  Vector3.hpp  Vector4.h  Vector4.hpp  fixedPoint.hpp  fixedPointFloat.hpp
include/rasterizer/: Attribute.hpp  BarycentricRasterizer.hpp  Clipper.hpp  CohenSutherlandClipper.hpp  DefaultShader.hpp  Mesh.hpp  Rasterizer.hpp  RenderTexture.hpp  Shader.hpp  StandardRasterizer.hpp  Vertex.hpp  WeilerAthertonClipper.hpp
include/util/: MatrixUtil.hpp  ParsingFile.hpp  QuaternionUtil.hpp
include/window/: Window.h
src/: Level.cpp  Renderer.cpp  main.cpp
src/math/: Color.cpp  Matrix4x4.cpp  Quaternion.cpp  Vector3.cpp  Vector4.cpp  fixedPoint.cpp  fixedPointFloat.cpp
src/rasterizer/: BarycentricRasterizer.cpp  Clipper.cpp  CohenSutherlandClipper.cpp  DefaultShader.cpp  Mesh.cpp  Rasterizer.cpp  RenderTexture.cpp  StandardRasterizer.cpp  Vertex.cpp  WeilerAthertonClipper.cpp
src/util/: MatrixUtil.cpp  ParsingFile.cpp  QuaternionUtil.cpp
src/window/: Window.cpp
